Prevent jumping

--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -3,8 +3,7 @@
   width: 100%
 
 #matchcontainer
-  height: auto
-  max-height: 165px
+  height: 165px
   overflow-y: auto
   .tile
     position: relative
